workaround for bitmap fonts. bug 324706. r=vlad