gfx/thebes/src/gfxWindowsFonts.cpp
@@ -326,7 +326,8 @@ gfxWindowsFont::FillLogFont(PRInt16 currentWeight)
     mLogFont.lfStrikeOut      = (mStyle->decorations & FONT_DECORATION_STRIKEOUT) ? TRUE : FALSE;
     mLogFont.lfCharSet        = DEFAULT_CHARSET;
 #ifndef WINCE
-    mLogFont.lfOutPrecision   = OUT_TT_PRECIS;
+    // XXX this should be OUT_TT_PRECIS. change it back when we do bitmap fonts correctly
+    mLogFont.lfOutPrecision   = OUT_TT_ONLY_PRECIS;
 #else
     mLogFont.lfOutPrecision   = OUT_DEFAULT_PRECIS;
 #endif
